--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,33 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+
+<div class="page-header">
+  <h1>
+    Articles
+  </h1>
+</div>
+
+<% @articles.each{|article| %>
+
+    <div class="col-lg-12">
+      <section class="box ">
+        <div class="content-body">
+          <div class="row">
+
+            <div class="col-md-12 col-sm-12 col-xs-12">
+              <p>
+                <%=h article.user.email %> posted at <%=h article.created_at.strftime('%Y-%m-%d %H:%M') %>
+              </p>
+              <div><%=h markdown(article.body) %></div>
+              <p>
+                <%= link_to "#{article.comments.count} comments", article_path(article) %>
+              </p>
+            </div>
+
+            <div class="clearfix"></div>
+            <hr>
+
+          </div>
+        </div>
+      </section>
+    </div>
+
+<% } %>
