--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,13 +21,15 @@
 <div class="container">
 
   <% unless notice.nil? %><div class="alert alert-success" role="alert"><p><%= notice %></p></div><% end %>
-  <% unless alert.nil? %><div class="alert alert-danger" role="alert"><p><%= alert %></p></div><% end %>
+  <% unless alert.nil? %><div class="alert alert-danger"   role="alert"><p><%= alert %></p></div><% end %>
 
   <p>
     <% unless user_signed_in? %>
-        <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
+        <%= link_to 'Sign in', new_user_session_path,      :class => 'btn btn-success' %>
+        <%= link_to 'Sign up', new_user_registration_path, :class => 'btn btn-success' %>
     <% else %>
-        Successfully logged as <%=h current_user.email %>
+        Successfully logged as <%=h current_user.email %>.
+        <%= link_to 'Logout', destroy_user_session_path, :method => "DELETE", :class => 'btn btn-default' %>
     <% end %>
   </p>
 
