add bootstrap header

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+#header_buttons_area {
+    margin:10px 0 0 0;
+    text-align:right;
+    color: white;
+}
+
+.page-header {
+    margin-top: 60px !important;
+}
