--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,10 @@
 
+<div class="page-header">
+  <h1>
+    Reading article
+  </h1>
+</div>
+
 <div class="col-lg-12">
   <section class="box ">
     <div class="content-body">
