--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -3,7 +3,7 @@ New article on awesome Teknavo Blog
 
 Look at <%= article_url(@article) %>
 
-To unsubscribe, just follow this link: <%= @unsubscribe_url %>
+To unsubscribe, just follow this link: <%= unsubscribe_url(id: @user.id, code: @user.unsubscribe_code) %>
 
 Thanks for joining and have a great day!
 
